--- a/polygon.html
+++ b/polygon.html
@@ -2,18 +2,18 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Spirograph Canvas</title>
+    <title>Spirograph Polygon Canvas</title>
     <style>
     	canvas { display: block; margin: auto; }
     </style>
 </head>
 <body>
 
-<canvas id="spiral" width="750" height="750"></canvas>
+<canvas id="polygon" width="750" height="750"></canvas>
 
-<script src="spiral.js">
+<script src="polygon.js">
 </script>
+<a href="/">Spiral</a>
 
-<a href="/polygon">Polygon</a>
 </body>
 </html>
