--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <script src="spiral.js">
 </script>
 
-<a href="/polygon">Polygon</a>
+<a href="/spirograph/polygon">Polygon</a>
+<a href="/spirograph/spirograph">Spirograph</a>
 </body>
 </html>
