--- a/spirograph.html
+++ b/spirograph.html
@@ -2,19 +2,19 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Spirograph Polygon Canvas</title>
+    <title>Spirograph Canvas</title>
     <style>
     	canvas { display: block; margin: auto; }
     </style>
 </head>
 <body>
 
-<canvas id="polygon" width="750" height="750"></canvas>
+<canvas id="spirograph" width="750" height="750"></canvas>
 
-<script src="polygon.js">
+<script src="spirograph.js">
 </script>
 <a href="/spirograph/">Spiral</a>
-<a href="/spirograph/spirograph">Spirograph</a>
+<a href="/spirograph/polygon">Polygon</a>
 
 </body>
 </html>
